# puredds

./: .gitignore  README.md  pyproject.toml
src/puredds/: __init__.py  __main__.py  cli.py  dds.py  enums.py  headers.py
src/puredds/decompressors/: __init__.py  base.py  bc1.py  bc2.py  bc3.py  bc4.py  bc5.py  bc7.py  uncompressed.py
