[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puredds"
version = "0.2.0"
description = "High-performance DDS (DirectDraw Surface) texture file reader and converter with Numba JIT optimization"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Woeful_Wolf"}
]
keywords = ["dds", "texture", "directdraw", "surface", "image", "converter", "bc1", "bc2", "bc3", "bc4", "bc5", "dxt1", "dxt3", "dxt5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "Pillow>=8.0.0",
    "numba>=0.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/WoefulWolf/puredds"
Repository = "https://github.com/WoefulWolf/puredds"
"Bug Tracker" = "https://github.com/WoefulWolf/puredds/issues"

[project.scripts]
puredds = "puredds:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
